--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="text-center row col-9">
       <h1 class="display-7">Cadeaubon goed voor een uitje met hondje, zoontje en zijn vriendje. 
       </h1>
-      <p class="lead">Beste Kris. Wij wensen jou een fijne kerst en een gelukkig nieuwjaar. <br> Aan de rechter zijden zie je een lijst waar je een datum kan uitkiezen om de bon te innen.</p>
+      <p class="display-7">Beste Kris. Wij wensen jou een fijne kerst en een gelukkig nieuwjaar. <br> Maak van de feestdagen een magische tijd, vul ze met liefde, plezier en vooral gezelligheid! <br> <br> Aan de rechter zijden zie je een lijst waar je een datum kan uitkiezen om de bon te innen.</p>
 
 
       <!-- Vliegende afbeeldingen -->
@@ -32,15 +32,28 @@
       </div>
     </main>
 
+   
     <aside class="col-3">
       <h6>Datum:</h6>
-      <ul>
-        <li></li>
+      <ul class="h6 display-7">
+        <li>Hemelvaart weekend</li>
+        <li>Pinkster weekend</li>
+        <li>Grote vakantie
+          <ul>
+            <dt>Week of weekend</dt>
+          </ul>
+        </li>
       </ul>
+      <p>laat het ons weten!</p>
+      <a href="contact.html" class="btn btn-primary mt-3">antwoord</a>
     </aside>
+  
   </div>
- <footer>
-
+ <footer class="container">
+<ul class="text-center">
+  <h4>indienen voor:</h4>
+  <p>1 Maart 2025</p>
+</ul>
  </footer>
 
 
